# numerical-geophysics

./: .gitignore  .quarto-version  AGENTS.md  MAINTAINER.md  Makefile  Readme.md  _publish.yml  _quarto.yaml  backup.md  chap01.html  chap01.qmd  chap02.html  chap02.qmd  chap03.html  chap03.qmd  chap04.html  chap04.qmd  custom.md  index.html  index.qmd  install-quarto.sh  introduction.html  introduction.md  introduction.qmd  lecture-theme.css  lecture-theme.md  pyproject.toml  resume01.md  resume02.md  resume03.md  resume04.md  search.json
.github/workflows/: publish.yml
docs/: chap01.html  chap02.html  chap03.html  chap04.html  index.html  introduction.html  lecture-theme.css
docs/index_files/libs/bootstrap/: bootstrap-57d062cb41abcdee6aa17ab8b5d15a92.min.css  bootstrap.min.css
fortran/: LICENSE  Readme.md  advection.f90  burgers.f90  euler.f90
notebook/: BurgersEquation.ipynb  EulerEquation.ipynb  LinearAdvectionEquation.ipynb  LinearWaveEquation.ipynb  vonNeumannStabilityAnalysis.ipynb
report/: Makefile  _blank.typ  crossref_config.yaml  dvipdfmx-fonts.map  report.md  report.qmd  report.tex  template.tex
site_libs/bootstrap/: bootstrap.min.css
src/: bibliography.bib  chap01.qmd  chap02.qmd  chap03.html  chap03.qmd  chap04.html  index.html  index.qmd  introduction.qmd  lecture-theme.css  macros.qmd
